--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -2,7 +2,7 @@
   <ion-tab label="Chats" icon="chatbubbles" href="/app/tabs/(tab1:chats)">
     <ion-router-outlet name="tab1"></ion-router-outlet>
   </ion-tab>
-  <ion-tab label="Contacts" icon="contacts" href="/app/tabs/(tab2:contacts)">
+  <ion-tab label="Friends" icon="contacts" href="/app/tabs/(tab2:contacts)">
     <ion-router-outlet name="tab2"></ion-router-outlet>
   </ion-tab>
   <ion-tab label="Profile" icon="person" href="/app/tabs/(tab3:profile)">
